App: Update object_detection_torch for PyTorch iGPU wheels
Upcoming release Holoscan SDK >=3.6.0 aims to drop torchvision as a core
Holoscan SDK dependency, however the model used in
object_detection_torch requires torchvision symbols.

For iGPU platforms we need to fetch the Jetson PyPI torch and
torchvision packages for these symbols.

Addresses link time issue:
```
/usr/bin/ld: /usr/local/lib/python3.12/dist-packages/torch/lib/../../torch.libs/libopenblasp-r0-121ca252.3.30.so: undefined reference to `_gfortran_concat_string@GFORTRAN_8'

/usr/bin/ld: /usr/local/lib/python3.12/dist-packages/torch/lib/../../torch.libs/libopenblasp-r0-121ca252.3.30.so: undefined reference to `_gfortran_etime@GFORTRAN_8'
```

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -41,7 +41,16 @@ RUN /tmp/scripts/holohub setup && rm -rf /var/lib/apt/lists/*
 FROM base as torch
 
 # Install libraries
-RUN pip install torch torchvision
+ARG GPU_TYPE
+RUN if [ "${GPU_TYPE}" = "igpu" ]; then \
+        python3 -m pip install --force-reinstall torch torchvision torchaudio --index-url "https://pypi.jetson-ai-lab.io/jp6/cu129"; \
+    else \
+        pip install torch torchvision; \
+    fi; \
+    if ! find /usr/local/lib/python3.12/dist-packages/torch -name libtorch_cuda.so | grep -q .; then \
+        echo "libtorch_cuda.so not found, torch installation failed"; \
+        exit 1; \
+    fi
 
 # Set up Holoscan SDK container libtorch to be found with ldconfig for app C++ build and runtime
 RUN echo $(python3 -c "import torch; print(torch.__path__[0])")/lib > /etc/ld.so.conf.d/libtorch.conf \
