Combine the pubsub talker and listener apps Combine the vb1940 publisher and subscriber apps Other minor changes
Signed-off-by: Gil Shapira <gshapira@nvidia.com>

--- a/applications/holoscan_ros2/CMakeLists.txt
+++ b/applications/holoscan_ros2/CMakeLists.txt
@@ -17,5 +17,5 @@
 # In each subdirectory, there is a set of related applications.
 # For example, pubsub directory contains applications that publish and subscribe to ROS2 topics.
 # vb1940 directory contains applications that publish and subscribe images from the vb1940 sensor.
-add_subdirectory(pubsub)
-add_subdirectory(vb1940)
+add_holohub_application(pubsub DEPENDS OPERATORS holoscan_ros2)
+add_holohub_application(vb1940 DEPENDS OPERATORS holoscan_ros2)
