--- a/applications/holoscan_ros2/vb1940/Dockerfile
+++ b/applications/holoscan_ros2/vb1940/Dockerfile
@@ -18,7 +18,8 @@
 ############################################################
 # Build the vb1940 image with ROS2 and hololink dependencies
 ############################################################
-FROM nvcr.io/nvidia/clara-holoscan/holoscan:v3.3.0-dgpu AS vb1940
+ARG BASE_IMAGE=nvcr.io/nvidia/clara-holoscan/holoscan:v3.5.0-dgpu
+FROM ${BASE_IMAGE} AS vb1940
 
 # Install basic dependencies
 RUN apt update && apt install -y \
@@ -70,11 +71,7 @@ ENV PYTHONPATH=/opt/ros/jazzy/lib/python3.12/site-packages:/opt/nvidia/holoscan/
 RUN mkdir -p /usr/share/vulkan/icd.d /usr/share/vulkan/explicit_layer.d
 
 # Create a proper NVIDIA Vulkan ICD configuration
-RUN echo '{"file_format_version": "1.0.0", "ICD": {"library_path": "libGLX_nvidia.so.0", "api_version": "1.3.242"}}' > /usr/share/vulkan/icd.d/nvidia_icd.json
-
-# Ensure NVIDIA libraries are properly linked
-RUN ln -sf /usr/lib/aarch64-linux-gnu/libEGL_nvidia.so.535.183.01 /usr/lib/aarch64-linux-gnu/libEGL_nvidia.so.0 || true
-RUN ln -sf /usr/lib/aarch64-linux-gnu/libGLX_nvidia.so.535.183.01 /usr/lib/aarch64-linux-gnu/libGLX_nvidia.so.0 || true
+#RUN echo '{"file_format_version": "1.0.0", "ICD": {"library_path": "libGLX_nvidia.so.0", "api_version": "1.3.242"}}' > /usr/share/vulkan/icd.d/nvidia_icd.json
 
 RUN echo -e '#!/bin/bash \n \
 set -e \n \
@@ -90,7 +87,7 @@ RUN mkdir -p /deps
 RUN mkdir -p /root/.ssh && \
     ssh-keyscan -p 12051 gitlab-master.nvidia.com >> /root/.ssh/known_hosts
 
-# Clone the Hololinkrepository
+# Clone the Hololink repository
 WORKDIR /deps
 RUN --mount=type=ssh git clone --branch internal ssh://git@gitlab-master.nvidia.com:12051/holoscan/hololink.git holoscan-sensor-bridge
 
