Fix AJA format issue
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/workflows/ai_surgical_video/python/config.yaml
+++ b/workflows/ai_surgical_video/python/config.yaml
@@ -28,6 +28,11 @@ aja: # AJASourceOp
   rdma: true
   enable_overlay: false
 
+drop_alpha_channel: # FormatConverter to convert VideoBuffer to Tensor
+  in_dtype: "rgba8888"
+  out_dtype: "rgb888"
+  out_tensor_name: ""
+
 out_of_body_format_converter:
   out_tensor_name: source_video
   out_dtype: "float32"
