--- a/workflows/ai_surgical_video/python/config.yaml
+++ b/workflows/ai_surgical_video/python/config.yaml
@@ -28,9 +28,8 @@ aja: # AJASourceOp
   rdma: true
   enable_overlay: false
 
-drop_alpha_channel: # FormatConverter to convert VideoBuffer to Tensor
+aja_format_converter: # converts to rgb888 (drop alpha channel)
   in_dtype: "rgba8888"
-  out_dtype: "rgb888"
   out_tensor_name: ""
 
 out_of_body_format_converter:
